--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "فشل التحديث",
     "CL_DV_RF_deactivate_sabbath_desc": "يتم تنشيط وضع السبت على خزانة النبيذ الخاصة بك. اتبع الخطوات لإلغاء تنشيطه:",
     "CL_DV_RF_deactivate_sabbath_step_1": "اضغط مع الاستمرار على النقاط الثلاث <img> الموجودة على الثلاجة لمدة <font> 3 ثوانٍ. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "قم أولا بإلغاء تنشيط وضع السبت بالضغط على مفتاح القفل على جهازك لمدة 3 ثوان."
+    "CL_DV_RF_deactivate_sabbath_tips": "قم أولا بإلغاء تنشيط وضع السبت بالضغط على مفتاح القفل على جهازك لمدة 3 ثوان.",
+    "CL_DV_RF_combi_super_cool_desc": "ستنتقل حجرة التبريد إلى الحد الأقصى للتبريد لمدة xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "سيتم تشغيل حجرة التجميد للتبريد الأقصى لمدة xh",
+    "CL_DV_RF_combi_eco_mode_desc": "تم ضبط معظم درجات الحرارة الموفرة للطاقة لجميع المقصورات. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "ضبط درجات الحرارة عند تنظيف حجرة التبريد في الثلاجة أو عندما يكون باب الجهاز مفتوحًا لفترة أطول من الوقت.",
+    "CL_DV_RF_combi_holiday_mode_desc": "وظيفة توفير الطاقة المعدة مسبقًا عندما تكون بعيدًا عن المنزل لفترة طويلة من الوقت.",
+    "CL_DV_RF_combi_party_mode_desc": "يتيح أقصى قدر من التبريد، مما يجعله مناسبًا لتبريد كميات كبيرة من المنتجات بسرعة خلال اليوم.",
+    "CL_DV_RF_combi_lock_mode_desc": "سيؤدي تشغيل القفل إلى تعطيل الشاشة. يؤدي الضغط على مفتاح X على شاشة الجهاز لمدة 3 ثوانٍ إلى تعطيل القفل.",
+    "CL_DV_RF_combi_lights_desc": "يتكيف الثلاجة تلقائيًا مع كمية الضوء في الغرفة ويغير أضواء الثلاجة وفقًا لذلك.",
+    "CL_CF_CO_read_more": "اقرأ المزيد"
 }
