--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Неуспешна актуализация",
     "CL_DV_RF_deactivate_sabbath_desc": "Sabbath Mode е активиран на вашия шкаф за вино. Следвайте стъпките, за да го деактивирате:",
     "CL_DV_RF_deactivate_sabbath_step_1": "Натиснете и задръжте трите точки <img> на вашия хладилник за <font> 3 секунди. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "Първо деактивирайте съботния режим, като натиснете клавиша Lock на вашия уред за 3 секунди."
+    "CL_DV_RF_deactivate_sabbath_tips": "Първо деактивирайте съботния режим, като натиснете клавиша Lock на вашия уред за 3 секунди.",
+    "CL_DV_RF_combi_super_cool_desc": "Охлаждащото отделение ще премине на максимално охлаждане за xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "Фризерното отделение ще премине на максимално охлаждане за xh",
+    "CL_DV_RF_combi_eco_mode_desc": "Най-енергийно ефективни температури са зададени за всички отделения. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Коригирани температури при почистване на охладителното отделение на хладилника или когато вратата на уреда ще бъде отворена за по-дълъг период от време.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Предварително настроена функция за пестене на енергия, когато сте далеч от дома за по-дълъг период от време.",
+    "CL_DV_RF_combi_party_mode_desc": "Позволява максимално охлаждане, удобно за бързо охлаждане на големи запаси от продукти през деня.",
+    "CL_DV_RF_combi_lock_mode_desc": "Включването на заключването ще деактивира екрана. Натискането на бутона X на екрана на уреда за 3 секунди деактивира заключването.",
+    "CL_DV_RF_combi_lights_desc": "Хладилникът автоматично се настройва към количеството светлина в помещението и съответно променя светлините на хладилника.",
+    "CL_CF_CO_read_more": "Прочетете повече"
 }
