--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Αποτυχία ενημέρωσης",
     "CL_DV_RF_deactivate_sabbath_desc": "Η λειτουργία Sabbath είναι ενεργοποιημένη στο ντουλάπι κρασιού σας. Ακολουθήστε τα βήματα για να την απενεργοποιήσετε:",
     "CL_DV_RF_deactivate_sabbath_step_1": "Πατήστε παρατεταμένα τις τρεις τελείες <img> στο ψυγείο σας για <font> 3 δευτερόλεπτα. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "Πρώτα απενεργοποιήστε τη λειτουργία Σαββάτου πατώντας το πλήκτρο κλειδώματος στη συσκευή σας για 3 δευτερόλεπτα."
+    "CL_DV_RF_deactivate_sabbath_tips": "Πρώτα απενεργοποιήστε τη λειτουργία Σαββάτου πατώντας το πλήκτρο κλειδώματος στη συσκευή σας για 3 δευτερόλεπτα.",
+    "CL_DV_RF_combi_super_cool_desc": "Ο χώρος ψύξης θα πάει στη μέγιστη ψύξη για xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "Ο θάλαμος κατάψυξης θα φτάσει στη μέγιστη ψύξη για xh",
+    "CL_DV_RF_combi_eco_mode_desc": "Οι περισσότερες ενεργειακά αποδοτικές θερμοκρασίες έχουν ρυθμιστεί για όλα τα διαμερίσματα. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Ρυθμισμένες θερμοκρασίες όταν καθαρίζετε το ψυγείο του ψυγείου ή όταν η πόρτα της συσκευής θα είναι ανοιχτή για μεγαλύτερο χρονικό διάστημα.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Μια προκαθορισμένη λειτουργία εξοικονόμησης ενέργειας για όταν λείπετε από το σπίτι για μεγαλύτερο χρονικό διάστημα.",
+    "CL_DV_RF_combi_party_mode_desc": "Επιτρέπει τη μέγιστη ψύξη, βολικό για γρήγορη ψύξη μεγάλων αποθεμάτων προϊόντων κατά τη διάρκεια της ημέρας.",
+    "CL_DV_RF_combi_lock_mode_desc": "Η ενεργοποίηση του κλειδώματος θα απενεργοποιήσει την οθόνη. Πατώντας το πλήκτρο X στην οθόνη της συσκευής για 3 δευτερόλεπτα απενεργοποιείται το κλείδωμα.",
+    "CL_DV_RF_combi_lights_desc": "Το ψυγείο προσαρμόζεται αυτόματα στην ποσότητα φωτός στο δωμάτιο και αλλάζει ανάλογα τα φώτα του ψυγείου.",
+    "CL_CF_CO_read_more": "Διαβάστε περισσότερα"
 }
