--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "به روز رسانی شکست",
     "CL_DV_RF_deactivate_sabbath_desc": "حالت سبت در کابینت شراب شما فعال است. مراحل را برای غیرفعال کردن ان دنبال کنید:",
     "CL_DV_RF_deactivate_sabbath_step_1": "سه نقطه <img> را روی یخچال خود فشار دهید و به مدت 3 ثانیه <font> نگه دارید. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "ابتدا حالت سبت را با فشار دادن کلید قفل در دستگاه خود به مدت 3 ثانیه غیرفعال کنید."
+    "CL_DV_RF_deactivate_sabbath_tips": "ابتدا حالت سبت را با فشار دادن کلید قفل در دستگاه خود به مدت 3 ثانیه غیرفعال کنید.",
+    "CL_DV_RF_combi_super_cool_desc": "محفظه خنک کننده به حداکثر خنک کننده برای xh می رود",
+    "CL_DV_RF_combi_fast_freeze_desc": "محفظه فریزر به حداکثر خنک کننده برای xh می رود",
+    "CL_DV_RF_combi_eco_mode_desc": "بیشتر دماهای کارآمد انرژی برای همه محفظه ها تنظیم شده است. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "دمای تنظیم شده هنگام تمیز کردن محفظه خنک کننده یخچال یا زمانی که درب دستگاه برای مدت طولانی باز است.",
+    "CL_DV_RF_combi_holiday_mode_desc": "یک عملکرد از پیش تنظیم شده صرفه جویی در انرژی برای زمانی که برای مدت طولانی تری از خانه دور هستید.",
+    "CL_DV_RF_combi_party_mode_desc": "حداکثر خنک کننده را فعال می کند، برای خنک کردن سریع انبارهای بزرگ محصولات در طول روز راحت است.",
+    "CL_DV_RF_combi_lock_mode_desc": "روشن کردن قفل صفحه را غیرفعال می کند. با فشار دادن کلید X روی صفحه دستگاه به مدت 3 ثانیه، قفل غیرفعال می شود.",
+    "CL_DV_RF_combi_lights_desc": "یخچال به طور خودکار میزان نور اتاق را تنظیم می کند و چراغ های یخچال را متناسب با آن تغییر می دهد.",
+    "CL_CF_CO_read_more": "ادامه مطلب"
 }
