--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "अद्यतन विफलता",
     "CL_DV_RF_deactivate_sabbath_desc": "",
     "CL_DV_RF_deactivate_sabbath_step_1": "अपने फ्रिज पर तीन बिंदुओं <img> को <font>3 सेकंड</font> के लिए दबाकर रखें।",
-    "CL_DV_RF_deactivate_sabbath_tips": ""
+    "CL_DV_RF_deactivate_sabbath_tips": "",
+    "CL_DV_RF_combi_super_cool_desc": "शीतलन कक्ष xh के लिए अधिकतम शीतलन पर जाएगा",
+    "CL_DV_RF_combi_fast_freeze_desc": "फ्रीजर कम्पार्टमेंट xh के लिए अधिकतम ठंडा हो जाएगा",
+    "CL_DV_RF_combi_eco_mode_desc": "सभी डिब्बों के लिए सर्वाधिक ऊर्जा कुशल तापमान निर्धारित किया गया है। ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "रेफ्रिजरेटर के कूलर कम्पार्टमेंट की सफाई करते समय या जब उपकरण का दरवाजा लंबे समय तक खुला रहेगा, तब तापमान को समायोजित किया जा सकता है।",
+    "CL_DV_RF_combi_holiday_mode_desc": "जब आप लंबे समय तक घर से बाहर रहते हैं तो इसके लिए एक पूर्व-निर्धारित ऊर्जा बचत फ़ंक्शन होता है।",
+    "CL_DV_RF_combi_party_mode_desc": "अधिकतम शीतलन सक्षम करता है, जो दिन के दौरान उत्पादों के बड़े स्टॉक को शीघ्रता से ठंडा करने के लिए सुविधाजनक है।",
+    "CL_DV_RF_combi_lock_mode_desc": "लॉक चालू करने से स्क्रीन बंद हो जाएगी। उपकरण स्क्रीन पर X कुंजी को 3 सेकंड तक दबाने से लॉक बंद हो जाता है।",
+    "CL_DV_RF_combi_lights_desc": "रेफ्रिजरेटर स्वचालित रूप से कमरे में प्रकाश की मात्रा को समायोजित कर लेता है और तदनुसार फ्रिज की लाइट बदल देता है।",
+    "CL_CF_CO_read_more": "और पढ़ें"
 }
