--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Жаңарту сәтсіздігі",
     "CL_DV_RF_deactivate_sabbath_desc": "",
     "CL_DV_RF_deactivate_sabbath_step_1": "Тоңазытқыштағы үш нүктені <img> <font> 3 секунд басып тұрыңыз. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": ""
+    "CL_DV_RF_deactivate_sabbath_tips": "",
+    "CL_DV_RF_combi_super_cool_desc": "Салқындату бөлімі xh үшін максималды салқындатуға өтеді",
+    "CL_DV_RF_combi_fast_freeze_desc": "Мұздату камерасы максималды салқындату режиміне х сағатқа өтеді",
+    "CL_DV_RF_combi_eco_mode_desc": "Қуатты үнемдейтін температуралардың көпшілігі барлық бөлімдер үшін орнатылған. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Тоңазытқыштың салқындатқыш бөлігін тазалау кезінде немесе құрылғының есігі ұзақ уақыт бойы ашық болғанда реттелетін температуралар.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Ұзақ уақыт бойы үйден тыс кезде алдын ала орнатылған қуат үнемдеу функциясы.",
+    "CL_DV_RF_combi_party_mode_desc": "Максималды салқындату мүмкіндігін береді, күн ішінде өнімдердің үлкен қорын жылдам салқындату үшін ыңғайлы.",
+    "CL_DV_RF_combi_lock_mode_desc": "Құлыпты қосу экранды өшіреді. Құрылғы экранындағы X пернесін 3 секунд басу құлыптауды өшіреді.",
+    "CL_DV_RF_combi_lights_desc": "Тоңазытқыш бөлмедегі жарық мөлшерін автоматты түрде реттейді және соған сәйкес тоңазытқыш шамдарын өзгертеді.",
+    "CL_CF_CO_read_more": "Толығырақ оқыңыз"
 }
