--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Неуспешно ажурирање",
     "CL_DV_RF_deactivate_sabbath_desc": "",
     "CL_DV_RF_deactivate_sabbath_step_1": "Притиснете и задржете ги трите точки <img> на вашиот фрижидер <font> 3 секунди. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": ""
+    "CL_DV_RF_deactivate_sabbath_tips": "",
+    "CL_DV_RF_combi_super_cool_desc": "Преградата за ладење ќе оди на максимално ладење за xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "Преградата за замрзнување ќе оди на максимално ладење за xh",
+    "CL_DV_RF_combi_eco_mode_desc": "Повеќето енергетски ефикасни температури се поставени за сите прегради. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Прилагодени температури при чистење на ладилникот на фрижидерот или кога вратата на апаратот ќе биде отворена подолго време.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Претходно поставена функција за заштеда на енергија за кога сте надвор од дома подолг временски период.",
+    "CL_DV_RF_combi_party_mode_desc": "Овозможува максимално ладење, погодно за брзо ладење на големи залихи производи во текот на денот.",
+    "CL_DV_RF_combi_lock_mode_desc": "Вклучувањето заклучување ќе го оневозможи екранот. Со притискање на копчето X на екранот на апаратот 3 секунди се оневозможува заклучувањето.",
+    "CL_DV_RF_combi_lights_desc": "Фрижидерот автоматски се прилагодува на количината на светлина во просторијата и соодветно ги менува светлата на фрижидерот.",
+    "CL_CF_CO_read_more": "Прочитајте повеќе"
 }
