--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Ошибка обновления",
     "CL_DV_RF_deactivate_sabbath_desc": "Режим субботы активируется на вашем винном шкафу. Выполните следующие действия, чтобы деактивировать его:",
     "CL_DV_RF_deactivate_sabbath_step_1": "Нажмите и удерживайте три точки <img> на холодильнике в течение <font> 3 секунд. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "Сначала отключите режим субботы, нажав клавишу блокировки на приборе и удерживая ее в течение 3 секунд."
+    "CL_DV_RF_deactivate_sabbath_tips": "Сначала отключите режим субботы, нажав клавишу блокировки на приборе и удерживая ее в течение 3 секунд.",
+    "CL_DV_RF_combi_super_cool_desc": "Охлаждающий отсек перейдет в режим максимального охлаждения на xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "Морозильная камера перейдет в режим максимального охлаждения на xh",
+    "CL_DV_RF_combi_eco_mode_desc": "Для всех отсеков установлены наиболее энергоэффективные температуры. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Отрегулированные температуры при чистке холодильной камеры холодильника или когда дверца прибора будет открыта в течение длительного периода времени.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Предустановленная функция энергосбережения на случай, если вас долгое время нет дома.",
+    "CL_DV_RF_combi_party_mode_desc": "Обеспечивает максимальное охлаждение, удобно для быстрого охлаждения больших запасов продуктов в течение дня.",
+    "CL_DV_RF_combi_lock_mode_desc": "Включение блокировки отключит экран. Нажатие клавиши X на экране устройства в течение 3 секунд отключает блокировку.",
+    "CL_DV_RF_combi_lights_desc": "Холодильник автоматически подстраивается под уровень освещенности в помещении и соответствующим образом изменяет яркость освещения.",
+    "CL_CF_CO_read_more": "Читать далее"
 }
