--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Неуспешно ажурирање",
     "CL_DV_RF_deactivate_sabbath_desc": "Режим шабата се активирао на вашем винском ормарићу. Следите кораке да бисте га деактивирали:",
     "CL_DV_RF_deactivate_sabbath_step_1": "Притисните и држите три тачке <img> на фрижидеру <font> 3 секунде. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "Прво деактивирајте режим шабата тако што ћете притиснути тастер за закључавање на вашем уређају на 3 секунде."
+    "CL_DV_RF_deactivate_sabbath_tips": "Прво деактивирајте режим шабата тако што ћете притиснути тастер за закључавање на вашем уређају на 3 секунде.",
+    "CL_DV_RF_combi_super_cool_desc": "Одељак за хлађење ће ићи на максимално хлађење за кх",
+    "CL_DV_RF_combi_fast_freeze_desc": "Одељак замрзивача ће ићи на максимално хлађење за кх",
+    "CL_DV_RF_combi_eco_mode_desc": "Најефикасније температуре су подешене за све одељке. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Прилагођене температуре приликом чишћења расхладног одељка фрижидера или када ће врата уређаја бити отворена дуже време.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Унапред подешена функција уштеде енергије када сте одсутни од куће на дужи временски период.",
+    "CL_DV_RF_combi_party_mode_desc": "Омогућава максимално хлађење, погодно за брзо хлађење великих залиха производа током дана.",
+    "CL_DV_RF_combi_lock_mode_desc": "Укључивање закључавања ће онемогућити екран. Притиском на тастер Кс на екрану уређаја у трајању од 3 секунде онемогућавате закључавање.",
+    "CL_DV_RF_combi_lights_desc": "Фрижидер се аутоматски прилагођава количини светлости у просторији и у складу са тим мења осветљење фрижидера.",
+    "CL_CF_CO_read_more": "Прочитајте више"
 }
