--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "การอัปเดตล้มเหลว",
     "CL_DV_RF_deactivate_sabbath_desc": "",
     "CL_DV_RF_deactivate_sabbath_step_1": "กดจุดสามจุด <img> บนตู้เย็นของคุณค้างไว้ <font> 3 วินาที </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": ""
+    "CL_DV_RF_deactivate_sabbath_tips": "",
+    "CL_DV_RF_combi_super_cool_desc": "ช่องทำความเย็นจะเข้าสู่โหมดทำความเย็นสูงสุดเป็นเวลา xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "ช่องแช่แข็งจะเย็นสูงสุดเป็นเวลา xh",
+    "CL_DV_RF_combi_eco_mode_desc": "อุณหภูมิที่มีประสิทธิภาพในการใช้พลังงานส่วนใหญ่จะถูกตั้งไว้สำหรับทุกช่อง ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "อุณหภูมิที่ปรับไว้เมื่อทำความสะอาดช่องแช่เย็นของตู้เย็นหรือเมื่อประตูเครื่องใช้ไฟฟ้าเปิดอยู่เป็นเวลานานขึ้น",
+    "CL_DV_RF_combi_holiday_mode_desc": "ฟังก์ชันประหยัดพลังงานที่ตั้งไว้ล่วงหน้าเมื่อคุณไม่อยู่บ้านเป็นเวลานาน",
+    "CL_DV_RF_combi_party_mode_desc": "ให้ความเย็นสูงสุด สะดวกในการทำความเย็นสต๊อกสินค้าจำนวนมากได้อย่างรวดเร็วตลอดทั้งวัน",
+    "CL_DV_RF_combi_lock_mode_desc": "การเปิดล็อคจะทำให้หน้าจอปิดใช้งาน การกดปุ่ม X บนหน้าจออุปกรณ์เป็นเวลา 3 วินาทีจะทำให้ล็อคปิดใช้งาน",
+    "CL_DV_RF_combi_lights_desc": "ตู้เย็นจะปรับแสงตามปริมาณแสงในห้องโดยอัตโนมัติและเปลี่ยนแสงของตู้เย็นตามนั้น",
+    "CL_CF_CO_read_more": "อ่านเพิ่มเติม"
 }
