--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "Cập nhật lỗi",
     "CL_DV_RF_deactivate_sabbath_desc": "Chế độ Sabbath được kích hoạt trên tủ rượu của bạn. Làm theo các bước sau để vô hiệu hóa nó:",
     "CL_DV_RF_deactivate_sabbath_step_1": "Nhấn và giữ ba dấu chấm <img> trên tủ lạnh trong <font> 3 giây. </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "Tắt chế độ Sabbath bằng cách nhấn phím khóa trên thiết bị trong 3 giây."
+    "CL_DV_RF_deactivate_sabbath_tips": "Tắt chế độ Sabbath bằng cách nhấn phím khóa trên thiết bị trong 3 giây.",
+    "CL_DV_RF_combi_super_cool_desc": "Ngăn làm mát sẽ đạt mức làm mát tối đa trong xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "Ngăn đông sẽ chuyển sang chế độ làm mát tối đa trong xh",
+    "CL_DV_RF_combi_eco_mode_desc": "Hầu hết nhiệt độ tiết kiệm năng lượng đều được cài đặt cho tất cả các ngăn. ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "Điều chỉnh nhiệt độ khi vệ sinh ngăn mát của tủ lạnh hoặc khi mở cửa tủ lạnh trong thời gian dài.",
+    "CL_DV_RF_combi_holiday_mode_desc": "Chức năng tiết kiệm năng lượng được cài đặt sẵn khi bạn vắng nhà trong thời gian dài.",
+    "CL_DV_RF_combi_party_mode_desc": "Cho phép làm mát tối đa, thuận tiện cho việc làm mát nhanh khối lượng sản phẩm lớn trong ngày.",
+    "CL_DV_RF_combi_lock_mode_desc": "Bật khóa sẽ vô hiệu hóa màn hình. Nhấn phím X trên màn hình thiết bị trong 3 giây sẽ vô hiệu hóa khóa.",
+    "CL_DV_RF_combi_lights_desc": "Tủ lạnh sẽ tự động điều chỉnh theo lượng ánh sáng trong phòng và thay đổi đèn tủ lạnh cho phù hợp.",
+    "CL_CF_CO_read_more": "Đọc thêm"
 }
