--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4683,5 +4683,14 @@
     "CL_CF_FW_update_failure": "更新失败",
     "CL_DV_RF_deactivate_sabbath_desc": "安息日模式已在设备端启用，想禁用该模式，请按照以下步骤操作:",
     "CL_DV_RF_deactivate_sabbath_step_1": "按住冰箱上的三个点<img>并持续<font> 3 秒钟。 </font>",
-    "CL_DV_RF_deactivate_sabbath_tips": "在设备端长按Lock按键3秒钟 禁用安息日模式"
+    "CL_DV_RF_deactivate_sabbath_tips": "在设备端长按Lock按键3秒钟 禁用安息日模式",
+    "CL_DV_RF_combi_super_cool_desc": "冷却室将进入最大冷却状态 xh",
+    "CL_DV_RF_combi_fast_freeze_desc": "冷冻室将以最大制冷模式运行 xh",
+    "CL_DV_RF_combi_eco_mode_desc": "所有隔间均设置了最节能的温度。 ",
+    "CL_DV_RF_combi_cleaning_mode_desc": "清洁冰箱冷藏室或冰箱门长时间打开时调整温度。",
+    "CL_DV_RF_combi_holiday_mode_desc": "当您较长时间不在家时可使用预设的节能功能。",
+    "CL_DV_RF_combi_party_mode_desc": "实现最大程度的冷却，方便白天快速冷却大量产品。",
+    "CL_DV_RF_combi_lock_mode_desc": "开启锁定将禁用屏幕。长按设备屏幕上的 X 键 3 秒可禁用锁定。",
+    "CL_DV_RF_combi_lights_desc": "冰箱会自动调节房间的光线量，并相应地改变冰箱灯。",
+    "CL_CF_CO_read_more": "阅读更多"
 }
